added display option to show player's performance over time
